--- a/spring-boot-tests/pom.xml
+++ b/spring-boot-tests/pom.xml
@@ -19,7 +19,8 @@
 		<!-- Deployment tests are slow so don't include by default -->
 		<module>spring-boot-smoke-tests-invoker</module>
 		<module>spring-boot-integration-tests</module>
-	</modules>
+        <module>spring-boot-web-tests</module>
+    </modules>
 	<profiles>
 		<!-- M2E profile to allow easy import into Eclipse -->
 		<profile>
