--- a/spring-boot-tests/spring-boot-web-tests/pom.xml
+++ b/spring-boot-tests/spring-boot-web-tests/pom.xml
@@ -9,12 +9,12 @@
 		<version>${revision}</version>
 	</parent>
 
-	<artifactId>spring-boot-yunai-tests</artifactId>
+	<artifactId>spring-boot-web-tests</artifactId>
 	<packaging>pom</packaging>
 	<name>Spring Boot Yunai Tests</name>
 	<description>${project.name}</description>
 	<properties>
-		<main.basedir>${basedir}/../..</main.basedir>
+<!--		<main.basedir>${basedir}/../..</main.basedir>-->
 		<java.version>1.8</java.version>
 	</properties>
 
@@ -23,6 +23,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-test</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
